# give-me-startup-ideas

./: pyproject.toml
src/givemestartupideas/: app.py
